More simplification of parent README